vertical alignment issue fixed

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
   overflow-x: hidden;
   max-width: 1440px;
+  font-family: "Inter", sans-serif;
 }
